network-policies/default-deny-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: default
spec:
   podSelector: {}
   policyTypes:
     - Egress
     - Ingress
