network-policies/lab-example.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: allowdns
   namespace: default
spec:
   podSelector: {}
   policyTypes:
   - Egress
   egress:
   - to:
     ports:
       - protocol: TCP
         port: 53
       - protocol: UDP
         port: 53

---
       
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: backendingress
   namespace: default
spec:
   podSelector:
      matchLabels:
        run: backend
   policyTypes:
   - Ingress
   ingress:
   - from:
     - podSelector:
         matchLabels:
            run: frontend
     ports:
     - protocol: TCP
       port: 80

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: defaultdeny
   namespace: default
spec:
   podSelector: {}
   policyTypes:
   - Ingress
   - Egress

---

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
   name: frontend-egress
   namespace: default
spec:
   podSelector:
     matchLabels:
         run: frontend
   policyTypes:
   - Egress
   egress:
   - to:
     - podSelector:
        matchLabels:
           run: backend
     ports:
     - protocol: TCP
       port: 80
